chore: Update specialties views and templates

--- a/medical/templates/base.html
+++ b/medical/templates/base.html
@@ -452,8 +452,8 @@
     
     
     <!-- JavaScript -->
-    <script src="{% static 'js/bundle.js?ver=3.2.3' %}"></script>
-    <script src="{% static 'js/scripts.js?ver=3.2.3' %}"></script>
+    <script src="{% static 'js/bundle.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 
 </html>
