--- a/medical/templates/base.html
+++ b/medical/templates/base.html
@@ -16,11 +16,12 @@
     <!-- StyleSheets  -->
     <link rel="stylesheet" href="{% static 'css/dashlite.css' %}">
     <link id="skin-default" rel="stylesheet" href="{% static 'css/theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/libs/fontawesome-icons.css' %}">
 </head>
 
 <body class="nk-body ui-rounder npc-default has-sidebar ">
     <div class="nk-app-root">
-        <div class="nk-sidebar" data-content="sidebarMenu">
+        <div class="nk-sidebar" style="width: 0px;" data-content="sidebarMenu">
             <div class="nk-sidebar-bar">
                 <div class="nk-apps-brand">
                     <a href="html/index.html" class="logo-link">
@@ -126,7 +127,7 @@
         <!-- main @s -->
         <div class="nk-main ">
             <!-- wrap @s -->
-            <div class="nk-wrap ">
+            <div class="nk-wrap" style="padding-left: 190px;">
                 <!-- main header @s -->
                 <div class="nk-header nk-header-fixed nk-header-fluid is-light">
                     <div class="container-fluid">
@@ -454,6 +455,7 @@
     <!-- JavaScript -->
     <script src="{% static 'js/bundle.js' %}"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/libs/datatable-btns.js' %}"></script>
 </body>
 
 </html>
