chore: Add edit and delete functionality for specialties

--- a/medical/templates/base.html
+++ b/medical/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/dashlite.css' %}">
     <link id="skin-default" rel="stylesheet" href="{% static 'css/theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/libs/fontawesome-icons.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body class="nk-body ui-rounder npc-default has-sidebar ">
